--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,10 @@ body {
     height: 2700px;
     opacity: 0.3;
     top: -24px;
-    background-image: url('../img/Tesla\ Landing.jpg');
+    background-image: url('../img/TeslaLanding.jpg');
     background-size: contain;
     background-repeat: no-repeat;
 }
-
-/* .container {
-    margin: 0 auto;
-} */
 
 .navbar {
     align-items: center;
@@ -64,19 +60,18 @@ body {
     padding: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     list-style: none;
 }
 
 .menu-main {
-    padding-left: 20px;
+    padding-left: 80px;
 }
 
 .menu-main li {
-    margin-right: 40px;
+    margin-right: 45px;
 }
 
-.menu-main li:last-child {
+.menu-second li:last-child {
     width: 24;
     margin-right: 0;
 }
@@ -93,7 +88,6 @@ body {
     right: -7px;
     width: 1514px;
     height: 467px;
-    flex-shrink: 0;
     opacity: 0.1;
     background-image: url('../img/Tesla-Wordmark-Red.png');
     background-size: contain;
@@ -112,7 +106,7 @@ body {
     text-align: center;
     
 }
-.tesla_titel p {
+.tesla_titel .welcome {
     position: relative;
     top: -10px;
     margin: 0;
@@ -131,7 +125,7 @@ body {
     width: 968px;
     height: 450px;
     flex-shrink: 0;
-    background-image: url('../img/tesla-png-tesla-png-hd-1636.png');
+    background-image: url('../img/tesla-png-tesla-png-hd-1636-light.png');
     align-items: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -141,44 +135,40 @@ body {
 .specifications {
     display: flex;
     align-items: center;
-    margin-top: 31px;
+    margin-top: 26px;
     padding-left: 319px;
     display: flex;
     align-items: center;
 }
 
 .spec_1 {
-    margin-right: 79px;
+    margin-right: 80px;
 }
 
 .spec_1, .spec_2{
     display: flex;
 }
 
+.spec_1 div, .spec_2 div {
+    margin-top: 2px;
+    height: 68px;
+}
+
 .speed_img {
-    padding: 10px 0 0 0;
+    padding-top: 13px;
     height: 100%;
-    margin-right: 12px;
+    margin-right: 8px;
 }
 
 .distance_img {
-    padding: 4px 0 0 0;
+    padding-top: 10px;
     height: 100%;
     margin-right: 5px;
 }
 
-.main_spec span {
-    color: #000;
-    font-family: Montserrat;
-    font-size: 35px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 39px;
-}
-
 .main_spec {
+    margin: 0;
     padding: 0;
-    margin: 0 0 0px 0;
     color: #000;
     font-family: Montserrat;
     font-size: 20px;
@@ -187,23 +177,32 @@ body {
     line-height: normal;
 }
 
-.second_spec {
-    padding: 0;
+.main_spec span {
     margin: 0;
+    padding: 0;
+    color: #000;
+    font-family: Montserrat;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 600;
+}
+
+.second_spec {
+    margin: 0;
+    padding: 0;
     color: #000;
     font-family: Montserrat;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
 }
 
 .action {
+    margin: 0;
     display: flex;
 }
 
 .test_drive {
-    flex-shrink: 0;
     margin-left: 100px;
     display: flex;
     align-items: center;
@@ -219,7 +218,6 @@ body {
 }
 
 .test_drive a {
-    flex-shrink: 0;
     text-decoration: none;
     width: 89px;
     height: 14px;
@@ -233,7 +231,6 @@ body {
 }
 
 .to_order {
-    flex-shrink: 0;
     align-items: center;
     margin-left: 35px;
     width: 160px;
@@ -243,7 +240,6 @@ body {
 }
 
 .to_order a {
-    flex-shrink: 0;
     width: 100px;
     height: 15px;
     text-decoration: none;
@@ -256,3 +252,78 @@ body {
     text-transform: uppercase;
 }
 
+.description {
+    position: relative;
+    margin-top: 25px;
+}
+.description_first {
+    margin-top: 33px;
+    width: 100%;
+    position: relative;
+}
+
+.direction_down {
+    margin-left: 50%;
+    margin-right: 50%;
+    width: 34px;
+    height: 20px;
+    background-image: url('/img/Vector.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.model_cockpit {
+    position: absolute;
+    width: 1548px;
+    height: 844px;
+    background-image: url('/img/2013-tesla-model-s-cockpit.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    top: 56px;
+}
+
+.direction_title {
+    margin: 8px 0 0 80px;
+    color: #E51937;
+    font-family: Montserrat;
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.model_description {
+    padding-top: 51px;
+    padding-left: 52px;
+    position: relative;
+    width: 440px;
+    height: 900px;
+    background: #E51937;
+    left: 1000px;
+}
+
+.description__title h3 {
+    padding: 0;
+    margin: 0;
+    width: 316px;
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.description__title p {
+    padding: 0;
+    margin: 11px 0 0 0;
+    width: 316px;
+    height: 206px;
+    flex-shrink: 0;
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
