--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     height: 2700px;
     opacity: 0.3;
     top: -24px;
-    background-image: url('../img/TeslaLanding.jpg');
+    background-image: url('../img/reference/TeslaLanding.jpg');
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -141,6 +141,7 @@ tesla title
 
 .specifications {
     display: flex;
+    height: 60px;
     align-items: center;
     margin-top: 26px;
     padding-left: 319px;
@@ -148,29 +149,34 @@ tesla title
     align-items: center;
 }
 
-.spec_1 {
-    margin-right: 80px;
+.specifications .spec_1 {
+    margin-right: 78px;
 }
 
-.spec_1, .spec_2{
+.specifications .spec_1, .specifications .spec_2{
     display: flex;
 }
 
-.spec_1 div, .spec_2 div {
-    margin-top: 2px;
-    height: 68px;
+
+
+.specifications .spec_1_speed_img{
+    margin-top: 16px;
+    width: 55px;
+    height: 40px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('/img/Speed.svg');
 }
 
-.speed_img {
-    padding-top: 13px;
-    height: 100%;
-    margin-right: 8px;
+.specifications .spec_1_speed {
+    margin-left: 7px;
 }
 
-.distance_img {
-    padding-top: 10px;
-    height: 100%;
-    margin-right: 5px;
+.specifications .spec_2_distance_img {
+    margin-top: 7px;
+    width: 47px;
+    background-repeat: no-repeat;
+    background-image: url('/img/RoadIcon.svg');
 }
 
 .main_spec {
@@ -181,7 +187,6 @@ tesla title
     font-size: 20px;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
 }
 
 .main_spec span {
@@ -205,7 +210,7 @@ tesla title
 }
 
 .tesla_titel .action {
-    margin: 0;
+    margin: 5px 0 0 0;
     display: flex;
 }
 
@@ -217,11 +222,11 @@ tesla title
     border: none;
 }
 
-.tesla_titel .test_drive img {
+.tesla_titel .test_drive_img {
     width: 22px;
     height: 22px;
-    flex-shrink: 0;
     margin-right: 8px;
+    background-image: url("/img/steering-wheel.svg");
 }
 
 .tesla_titel .test_drive a {
@@ -277,7 +282,7 @@ description_specs
 
 .description {
     position: relative;
-    margin-top: 25px;
+    margin-top: 34px;
 }
 
 .description_first {
@@ -351,29 +356,16 @@ description_specs
 }
 
 .description_spec_2 {
-    margin-top: 35px;
+    margin-top: 39px;
 }
 
 .description_spec_3 {
-    margin-top: 25px;
-}
-
-
-.spec_screen {
-    height: 100%;
-}
-
-.spec_wifi {
-    height: 100%;
-}
-
-.spec_bag {
-    height: 100%;
+    margin-top: 38px;
 }
 
 .description_specs {
     margin-left: 52px;
-    margin-top: 54px;
+    margin-top: 66px;
     width: 316px;
 }
 
@@ -385,7 +377,7 @@ description_specs
     font-size: 20px;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
+    line-height: 20px;
 }
 
 .description_specs .main_spec span {
@@ -393,12 +385,14 @@ description_specs
     padding: 0;
     color: #ffffff;
     font-family: Montserrat;
+    line-height: 0px;
     font-size: 35px;
     font-style: normal;
     font-weight: 600;
 }
 
 .description_specs .second_spec {
+    width: 180px;
     margin: 0;
     padding: 0;
     color: #ffffff;
@@ -408,27 +402,46 @@ description_specs
     font-weight: 400;
 }
 
-.spec_wifi {
+.description_spec_1 .spec_screen_img {
+    width: 36px;
+    height: 53px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('/img/screen.svg');
+}
+
+.description_spec_1 .spec_screen {
+    margin-left: 19px;
+}
+
+.description_spec_2 .spec_wifi_img {
     position: relative;
     left: -4px;
+    width: 58px;
+    height: 34px;
+    background-repeat: no-repeat;
+    background-image: url('/img/wifi.svg');
 }
 
-.description_spec_1 div {
-    margin-left: 28px;
+.description_spec_2 .spec_wifi {
+    margin-left: 17px;
 }
 
-.description_spec_2 div {
-    margin-left: 20px;
+.description_spec_3 .spec_bag_img {
+    width: 36px;
+    height: 52px;
+    background-repeat: no-repeat;
+    background-image: url('/img/bag.svg');
 }
 
-.description_spec_3 div {
+.description_spec_3 .spec_bag {
     margin-left: 27px;
 }
 
 
 .description_action {
     padding: 0;
-    margin: 171px 0 0 49px;
+    margin: 174px 0 0 49px;
     display: flex;
     width: 347px;
     height: 40px;
@@ -438,6 +451,7 @@ description_specs
 }
 
 .description_action .more_info {
+    padding: 0;
     display: flex;
     align-items: center;
     background-color: transparent;
@@ -461,7 +475,7 @@ description_specs
 .more_info a {
     text-decoration: none;
     color: #ffffff;
-    width: 147px;
+    width: 142px;
     font-family: Montserrat;
     font-size: 13px;
     font-style: normal;
