--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@ body {
     margin: 0 auto;
     font-family: 'Montserrat', sans-serif;
     align-items: center;
-    /* border-left: 0.2px solid green;
-    border-right: 0.2px solid green; */
+    border-left: 0.2px solid green;
+    border-right: 0.2px solid green;
 }
 
 .test_div {
@@ -659,6 +659,7 @@ description_specs
     height: 74px;
     background-size: contain;
     background-image: url("../img/security.png");
+    background-repeat: no-repeat;
 }
 
 .security .security_text {
