--- a/css/media.css
+++ b/css/media.css
@@ -166,6 +166,7 @@
         height: 51px;
         width: 100%;
     }
+
     .menu-main {
         gap: 2%;
     }
@@ -355,4 +356,334 @@
         top: 30%;
     }
     
+}
+
+@media only screen and (min-width: 658px) and (max-width: 831.5px) {
+    body {
+        min-width: 658px;
+        max-width: 831.5px;
+        margin: 0 auto;
+        font-family: 'Montserrat', sans-serif;
+        align-items: center;
+        border-left: 0.2px solid green;
+        border-right: 0.2px solid green;
+    }
+
+    .logo {
+        position: absolute;
+        margin-left: 2%;
+        width: 140px;
+        height: 51px;
+        background-image: url(../img/tesla-wordmark-red.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    .navbar {
+        position: relative;
+        margin: 0 2.5%;
+        height: 51px;
+        width: 100%;
+    }
+    .menu-main {
+        display: none;
+    }
+
+    .menu-second > :not(:last-child) {
+        display: none;
+    }
+
+    .menu-second {
+        width: 24px;
+    }
+
+    .tesla_woodmark {
+        position: absolute;
+        top: 30px;
+        width: 100%;
+        height: 50%;
+        opacity: 0.1;
+        background-image: url(../img/tesla-wordmark-red.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100% auto;
+    }
+
+    .model_s {
+        position: relative;
+        margin-top: 40px;
+        left: 6%;
+        width: 90%;
+        height: 55%;
+        background-image: url(../img/tesla-png-tesla-png-hd-1636-light.png);
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+    }
+
+    .specifications {
+        display: flex;
+        flex-wrap: wrap;
+        padding-left: 18%;
+        padding-right: 18%;
+        gap: 65px;
+        width: 100%;
+        margin-top: 0;
+    }
+
+    .specifications .spec_1 {
+        margin-right: 0;
+    }
+
+    .specifications .spec_1_speed_img {
+        width: 65px;
+        height: 50px;
+    }
+
+    .specifications .spec_2_distance_img {
+        margin-top: 11px;
+        width: 43.711px;
+        height: 71.657px;
+    }
+
+    .main_spec {
+        font-size: 20px;
+    }
+
+    .main_spec span {
+        font-size: 50px;
+    }
+
+    .second_spec {
+        font-size: 15px;
+    }
+
+    .tesla_titel .action {
+        margin-top: -5px;
+        display: flex;
+        gap: 20px;
+    }
+
+    .tesla_titel .test_drive {
+        margin-left: 0;
+        width: 220px;
+        height: 55px;
+    }
+
+    .tesla_titel .test_drive_img {
+        width: 30.365px;
+        height: 30.365px;
+    }
+
+    .tesla_titel .test_drive a {
+        width: 122.842px;
+        height: 24.844px;
+        font-size: 16px;
+    }
+
+    .tesla_titel .to_order {
+        margin-left: 0;
+        width: 220px;
+        height: 55px;
+    }
+
+    .tesla_titel .to_order a {
+        font-size: 16px;
+    }
+
+    .description {
+        margin-top: 130px;
+    }
+
+    .description > * {
+        flex-direction: column;
+    }
+
+    .description_first {
+        height: max-content;
+    }
+
+    .description_model_cockpit, .model_description {
+        position: relative;
+    }
+
+    .description_model_cockpit {
+        width: 100%;
+        min-height: 495px;
+        height: 60%;
+        background-size: 100% auto;
+    }
+
+    .description_model_cockpit .description_title {
+        position: absolute;
+        margin: 0;
+        right: 58px;
+        font-size: 70px;
+    }
+
+    .model_description {
+        padding: 40px 20px 0 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        min-width: 100%;
+        max-width: 100%;
+        gap: 12%;
+        min-height: 490px;
+        height: 54%;
+        max-height: 500px;
+    }
+
+    .model_description_title, .description_specs, .description_action {
+        margin: 0;
+        padding: 0;
+    }
+
+    .model_description_title,.description_specs  {
+        min-height: 255px;
+        height: 30%;
+        max-height: 300px;
+        width: 40%;
+        max-width: 300px;
+    }
+
+    .model_description_title p {
+        width: 100%;
+        min-height: 205px;
+        height: 100%;
+        max-height: 240px;
+    }
+
+    .description_spec_1, .description_spec_2, .description_spec_3 {
+        width: 315px;
+    }
+
+    .description_action {
+        margin-top: 8%;
+        gap: 20px;
+    }
+
+    .description_action .more_info {
+        width: 220px;
+        height: 55px;
+    }
+
+    .description_action .to_order {
+        width: 220px;
+        height: 55px;
+    }
+
+    .description_action .to_order a {
+        font-size: 16px;
+    }
+
+    .more_info a {
+        width: 180px;
+        font-size: 16px;
+    }
+
+    .more_info p {
+        padding-top: 5px;
+        width: 32px;
+        height: 32px;
+        font-family: Montserrat;
+        font-size: 19px;
+    }
+
+    .description_second{
+        height: max-content;
+        flex-direction: column-reverse;
+    }
+
+    .description_model_security {
+        width: 100%;
+        min-height: 550px;
+        height: 100%;
+        max-height: 700;
+        background-position: center;
+    }
+    .model_s_title {
+        position: absolute;
+        font-size: 148px;
+        padding: 3% 0 0 0;
+    }
+
+    .car_frame {
+        position: relative;
+        top: 0%;
+        right: 1.5%;
+        width: 100%;
+        min-height: 550px;
+        height: 100%;
+        max-height: 700;
+        background-size: 100% auto;
+    }
+
+    .description_second .security {
+        display: none;
+    }
+    
+    .description_second .model_description {
+        padding: 40px 20px 0 20px;
+        flex-direction: row;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        min-width: 100%;
+        max-width: 100%;
+        gap: 8%;
+        min-height: 490px;
+        height: max-content;
+        max-height: 600px;
+    }
+
+    .description_second .model_description > * {
+        margin: 0;
+        padding: 0;
+        min-height: 255px;
+        height: 30%;
+        max-height: 300px;
+        width: 40%;
+        max-width: 300px;
+    }
+
+    .protection_assessment p::after {
+        right: 44px;
+    }
+
+
+    .description_second .model_description .description_action {
+        gap: 20px;
+        margin-top: 8%;
+        min-height: 60px;
+        max-height: 60px;
+        width: max-content;
+        max-width: 100%;
+    }
+
+    .description_second .model_description .description_action .more_info {
+        width: 220px;
+        height: 55px;
+    }
+
+    .description_second .model_description .description_action .to_order {
+        width: 220px;
+        height: 55px;
+    }
+
+    .description_second .model_description .description_action .to_order a {
+        font-size: 16px;
+    }
+
+    .description_second .model_description .more_info a {
+        width: 180px;
+        font-size: 16px;
+    }
+
+    .description_second .model_description .more_info p {
+        padding-top: 5px;
+        width: 32px;
+        height: 32px;
+        font-family: Montserrat;
+        font-size: 19px;
+    }
 }
